--- a/mlkittry/build.gradle
+++ b/mlkittry/build.gradle
@@ -3,6 +3,8 @@ plugins {
     id 'com.github.dcendents.android-maven'
 }
 
+group='com.github.binhlt1310'
+
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.3"
@@ -35,7 +37,6 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation project(path: ':mlkittry')
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
